# hashing

./: .gitignore  CHANGELOG.md  CLI_USAGE.md  COMPARE_FEATURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  PROJECT.md  README.md  SECURITY.md  test.sha512  verify.sh
.github/workflows/: ci.yml  release.yml
benches/: hash_bench.rs
examples/: basic.rs  batch_processing.rs  file_integrity.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
