bin = [
    { name = "hash", path = "src/bin/hash.rs" },
]
bench = [
    { name = "hash_bench", harness = false },
]

[package]
name = "hashing"
version = "0.1.5"
edition = "2021"
authors = [
    "hadi cahyadi <cumulus13@gmail.com>",
]
description = "A robust, production-ready hashing library and CLI tool supporting multiple algorithms"
repository = "https://github.com/cumulus13/hashing"
license = "MIT OR Apache-2.0"
keywords = [
    "hash",
    "crypto",
    "checksum",
    "digest",
    "cli",
]
categories = [
    "command-line-utilities",
    "cryptography",
]
readme = "README.md"
rust-version = "1.70"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
md-5 = "0.10"
blake2 = "0.10"
blake3 = "1.5"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
hex = "0.4"
clap-version-flag = "1.0.7"

[dependencies.clap]
version = "4.4"
features = [
    "derive",
    "cargo",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"

[dev-dependencies.criterion]
version = "0.5"
features = [
    "html_reports",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
